--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         content="width=device-width, initial-scale=1, viewport-fit=cover" />
 
   <title>Treino</title>
-
   <link rel="manifest" href="manifest.json" />
 
   <style>
@@ -25,6 +24,7 @@
       flex-direction: column;
     }
 
+    /* HEADER */
     header {
       padding: 16px;
       text-align: center;
@@ -33,20 +33,68 @@
       background: #020617;
     }
 
+    /* CONTENT */
     main {
       flex: 1;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 20px;
+      padding: 16px;
+      overflow-y: auto;
     }
 
-    footer {
-      padding: 12px;
-      text-align: center;
+    .exercise {
+      margin-bottom: 20px;
+    }
+
+    .exercise h2 {
+      font-size: 20px;
+      margin-bottom: 4px;
+    }
+
+    .exercise p {
       font-size: 14px;
+      opacity: 0.8;
+      margin-bottom: 16px;
+    }
+
+    .set {
       background: #020617;
-      opacity: 0.7;
+      border-radius: 12px;
+      padding: 12px;
+      margin-bottom: 12px;
+      display: flex;
+      gap: 8px;
+    }
+
+    .set span {
+      width: 60px;
+      font-weight: 600;
+      text-align: center;
+      line-height: 40px;
+    }
+
+    .set input {
+      flex: 1;
+      height: 40px;
+      border-radius: 8px;
+      border: none;
+      padding: 0 10px;
+      font-size: 16px;
+    }
+
+    /* FOOTER */
+    footer {
+      padding: 16px;
+      background: #020617;
+    }
+
+    button {
+      width: 100%;
+      height: 48px;
+      border-radius: 12px;
+      border: none;
+      background: #2563eb;
+      color: #fff;
+      font-size: 16px;
+      font-weight: 600;
     }
   </style>
 </head>
@@ -56,11 +104,35 @@
   <header>Registro de Treino</header>
 
   <main>
-    App carregando corretamente ✅
+    <div class="exercise">
+      <h2>Supino Reto Barra</h2>
+      <p>Peito • Reps 6–8 • RIR 2</p>
+
+      <div class="set">
+        <span>S1</span>
+        <input placeholder="Carga" />
+        <input placeholder="Reps" />
+        <input placeholder="RIR" value="2" />
+      </div>
+
+      <div class="set">
+        <span>S2</span>
+        <input placeholder="Carga" />
+        <input placeholder="Reps" />
+        <input placeholder="RIR" value="2" />
+      </div>
+
+      <div class="set">
+        <span>S3</span>
+        <input placeholder="Carga" />
+        <input placeholder="Reps" />
+        <input placeholder="RIR" value="2" />
+      </div>
+    </div>
   </main>
 
   <footer>
-    PWA • GitHub Pages
+    <button>Salvar exercício</button>
   </footer>
 
 </body>
