--- a/index.html
+++ b/index.html
@@ -2,11 +2,8 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1, viewport-fit=cover" />
-
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Treino</title>
-  <link rel="manifest" href="manifest.json" />
 
   <style>
     * {
@@ -20,29 +17,27 @@
       height: 100vh;
       background: #0f172a;
       color: #f8fafc;
+      overflow: hidden;
       display: flex;
       flex-direction: column;
-      overflow: hidden;
     }
 
-    /* HEADER */
     header {
-      padding: 16px;
+      background: #020617;
+      padding: 14px;
       text-align: center;
       font-size: 18px;
       font-weight: 600;
-      background: #020617;
       flex-shrink: 0;
     }
 
-    /* CONTENT */
     main {
       flex: 1;
-      padding: 16px;
       overflow-y: auto;
+      overflow-x: hidden;
+      padding: 16px;
     }
 
-    /* BOTÃO */
     button {
       width: 100%;
       height: 48px;
@@ -54,15 +49,15 @@
       font-weight: 600;
     }
 
-    /* HOME */
-    .home label {
+    /* ===== HOME ===== */
+    #home label {
       font-size: 14px;
-      opacity: 0.8;
+      opacity: 0.85;
       margin-bottom: 8px;
       display: block;
     }
 
-    .home select {
+    #home select {
       width: 100%;
       height: 48px;
       border-radius: 12px;
@@ -72,7 +67,7 @@
       margin-bottom: 24px;
     }
 
-    /* EXERCÍCIO */
+    /* ===== WORKOUT ===== */
     .exercise h2 {
       font-size: 20px;
       margin-bottom: 4px;
@@ -98,10 +93,12 @@
       width: 40px;
       font-weight: 600;
       text-align: center;
+      flex-shrink: 0;
     }
 
     .set input {
       flex: 1;
+      min-width: 0;
       height: 40px;
       border-radius: 8px;
       border: none;
@@ -131,21 +128,19 @@
 
 <main>
 
-  <!-- TELA 1 — HOME -->
-  <section id="home" class="home">
+  <!-- HOME -->
+  <section id="home">
     <label>Qual treino hoje?</label>
-
     <select id="treinoSelect">
-      <option value="A1">Treino A1 — Push</option>
-      <option value="B1">Treino B1 — Pull</option>
-      <option value="C1">Treino C1 — Legs</option>
-      <option value="A2">Treino A2 — Push</option>
+      <option>A1 — Push</option>
+      <option>B1 — Pull</option>
+      <option>C1 — Legs</option>
+      <option>A2 — Push</option>
     </select>
-
     <button onclick="iniciarTreino()">Iniciar treino</button>
   </section>
 
-  <!-- TELA 2 — EXECUÇÃO -->
+  <!-- WORKOUT -->
   <section id="workout" class="hidden">
     <div class="exercise">
       <h2 id="exTitulo"></h2>
@@ -165,65 +160,63 @@
 </main>
 
 <script>
-/* ===== MOCK DE DADOS (depois vem do Sheets) ===== */
-const treinoMock = [
-  {
-    exercicio: "Supino reto barra",
-    info: "Peito • Reps 6–8 • RIR 2",
-    series: 4,
-    rir: 2
-  },
-  {
-    exercicio: "Supino inclinado halteres",
-    info: "Peito • Reps 8–10 • RIR 2",
-    series: 3,
-    rir: 2
+  const treinoMock = [
+    {
+      exercicio: "Supino reto barra",
+      info: "Peito • Reps 6–8 • RIR 2",
+      series: 4,
+      rir: 2
+    },
+    {
+      exercicio: "Supino inclinado halteres",
+      info: "Peito • Reps 8–10 • RIR 2",
+      series: 3,
+      rir: 2
+    }
+  ];
+
+  let exIndex = 0;
+
+  function iniciarTreino() {
+    document.getElementById("home").classList.add("hidden");
+    document.getElementById("workout").classList.remove("hidden");
+    document.getElementById("header").innerText = "Treino em execução";
+    exIndex = 0;
+    render();
   }
-];
 
-let exIndex = 0;
+  function render() {
+    const ex = treinoMock[exIndex];
+    document.getElementById("exTitulo").innerText = ex.exercicio;
+    document.getElementById("exInfo").innerText = ex.info;
 
-/* ===== FUNÇÕES ===== */
-function iniciarTreino() {
-  document.getElementById("home").classList.add("hidden");
-  document.getElementById("workout").classList.remove("hidden");
-  document.getElementById("header").innerText = "Treino em execução";
-  exIndex = 0;
-  renderEx();
-}
+    const cont = document.getElementById("series");
+    cont.innerHTML = "";
 
-function renderEx() {
-  const ex = treinoMock[exIndex];
-  document.getElementById("exTitulo").innerText = ex.exercicio;
-  document.getElementById("exInfo").innerText = ex.info;
-
-  const cont = document.getElementById("series");
-  cont.innerHTML = "";
-
-  for (let i = 1; i <= ex.series; i++) {
-    cont.innerHTML += `
-      <div class="set">
-        <span>S${i}</span>
-        <input placeholder="Carga">
-        <input placeholder="Reps">
-        <input value="${ex.rir}" placeholder="RIR">
-      </div>`;
+    for (let i = 1; i <= ex.series; i++) {
+      cont.innerHTML += `
+        <div class="set">
+          <span>S${i}</span>
+          <input placeholder="Carga">
+          <input placeholder="Reps">
+          <input value="${ex.rir}" placeholder="RIR">
+        </div>`;
+    }
   }
-}
 
-function next() {
-  if (exIndex < treinoMock.length - 1) {
-    exIndex++;
-    renderEx();
+  function next() {
+    if (exIndex < treinoMock.length - 1) {
+      exIndex++;
+      render();
+    }
   }
-}
 
-function prev() {
-  if (exIndex > 0) {
-    exIndex--;
-    renderEx();
+  function prev() {
+    if (exIndex > 0) {
+      exIndex--;
+      render();
+    }
   }
-}
 </script>
 
 </body>
