--- a/index.html
+++ b/index.html
@@ -236,6 +236,23 @@
 
       <div class="app-title">Treino Nerd</div>
 
+  <h2 style="margin-bottom:16px;">O que vamos treinar hoje?</h2>
+  
+  <label>Data</label>
+  <input
+    type="date"
+    id="dataTreino"
+    style="
+      width:100%;
+      height:46px;
+      border-radius:12px;
+      border:none;
+      padding:0 12px;
+      font-size:16px;
+      margin-bottom:20px;
+    "
+  />
+      
       <label>Selecione o treino</label>
       <select id="treinoSelect"></select>
 
@@ -336,6 +353,15 @@ async function carregarTreinos() {
 /* ===========================
    INICIAR TREINO
 =========================== */
+
+  const data = document.getElementById("dataTreino").value;
+const treino = document.getElementById("treinoSelect").value;
+
+if (!data || !treino) {
+  alert("Selecione a data e o treino antes de iniciar.");
+  return;
+}
+  
 async function iniciarTreino() {
   treinoAtual = document.getElementById("treinoSelect").value;
 
@@ -378,9 +404,10 @@ function render() {
     cont.innerHTML += `
       <div class="set">
         <span>S${i}</span>
-        <input class="carga" placeholder="Carga">
-        <input class="reps" placeholder="Reps">
-        <input class="rir" value="${ex.rir_alvo}" placeholder="RIR">
+        <input class="carga" type="number" step="0.5" placeholder="Carga">
+        <input class="reps" type="number" placeholder="Reps">
+        <input class="rir" type="number" min="0" max="5" placeholder="RIR">
+
       </div>
     `;
   }
@@ -390,6 +417,28 @@ function render() {
    SALVAR EXERCÍCIO
 =========================== */
 async function salvarExercicio() {
+  const sets = document.querySelectorAll(".set");
+
+for (let i = 0; i < sets.length; i++) {
+  const carga = sets[i].querySelector(".carga").value;
+  const reps = sets[i].querySelector(".reps").value;
+  const rir = sets[i].querySelector(".rir").value;
+
+  if (carga === "" || reps === "" || rir === "") {
+    alert(`Preencha todos os campos da série ${i + 1}.`);
+    return;
+  }
+
+  if (
+    isNaN(carga) ||
+    isNaN(reps) ||
+    isNaN(rir)
+  ) {
+    alert(`Valores inválidos na série ${i + 1}.`);
+    return;
+  }
+}
+
   const ex = exercicios[exIndex];
   const sets = document.querySelectorAll(".set");
 
